# GptOss_trial

./: .env.example  .gitignore  CLEANUP_REPORT.md  CLI_GUIDE.md  DEMO_COMPLETE.md  DEPLOY_E_TESTING_SUMMARY.md  DUAL_ENVIRONMENT_SETUP.md  ESEGUI_DEMO_F1.md  F1_DEMO_COMPLETE.md  F1_DEMO_README.md  F1_FIX_APPLIED.md  F1_QUICKSTART.md  F1_TEST_PROMPTS.md  FINETUNING_GUIDE.md  FINETUNING_SUMMARY.md  GEMMA3_QUICKSTART.md  GGUF_CONVERSION_GUIDE.md  GGUF_RESULT_SUMMARY.md  GPU_PROBLEM_SOLUTION.md  GPU_SETUP_FIX.md  GUIDA_LM_STUDIO.md  GUIDA_MODELLO_FINETUNED.py  HUGGINGFACE_AUTH_SETUP.md  INTEGRAZIONE_FATTA.md  LLAMA_CPP_TEST.md  Modelfile-gguf  Modelfile-safetensors  PRD_GPT-OSS_Apps.md  PYTHON_VERSION_FIX.md  README.md  RISULTATI_FINALI.md  SETUP_COMPLETATO.md  SOLUTION_FINAL_OLLAMA.md  STRUTTURA_PROGETTO.md  TROUBLESHOOTING.md  artura_final_guide.py  artura_prompts.py  combine_datasets.py  combined_f1_tolkien_data.json  convert_for_lm_studio.py  (+67 more)
.github/: copilot-instructions.md
docs/: ALTERNATIVA_TEXT_GEN_WEBUI.md  COMANDI_RAPIDI.md  COMANDI_RAPIDI_POST_FIX.md  FINETUNING_WORKFLOW_GUIDE.md  GUIDA_UI_GPU.md  GUIDA_UI_SIMPLE.md  PRD_GPT-OSS_Apps.md  QUICK_REFERENCE.md  README_UI.md  RIEPILOGO_COMPLETO.md  TRAINING_FIX_AND_OPTIMIZATION.md  requirements-inference.txt
examples/: advanced_examples.py  example.py  example_finetuning_integration.py  quick_start_finetuning.py
ollama_sessions/: artura_trained_model.json  esempio_sessione.json  test_save.json
scripts/: create_project.ps1  deploy.ps1  inference.ps1  run_wrapper_test.py  setup_dual_environments.ps1  train.ps1  (+2 more)
(+30 files in other folders)
