[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ollama-wrapper"
version = "0.0.0"
description = "Lightweight Python wrapper for a local Ollama HTTP API"
readme = "README.md"
requires-python = ">=3.8"
authors = [ { name = "Gianpy99" } ]
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["src"]
